fix: correct spacing and bg-color, reduce number of custom styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
-.form-control {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  justify-content: space-between;
-  height: 300px;
-  width: fit-content;
+.h-88 {
+  height: 22rem;
 }
 
-.fill-viewport {
+.h-min-screen {
   min-height: 100vh;
-}
-
-.btn-container {
-  width: fit-content;
 }
